<resources>
    <string name="app_name">Fozimat Movie</string>
    <string name="movies">Movies</string>
    <string name="tvShow">Tv Show</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="title_activity_detail">Detail Movie</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="the_movie">The Movie</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>