<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_tvShow"
        android:name="com.fozimat.catafozmovie.ui.show.TvShowFragment"
        android:label="@string/tvShow"
        tools:layout="@layout/fragment_show" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.fozimat.catafozmovie.ui.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.fozimat.catafozmovie.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>